force-app/main/default/objects/Kiva_Loan__c/fields/Signature_link__c.field-meta.xml
<CustomField>
    <fullName>Signature_link__c</fullName>
    <label>Signature link</label>
    <type>Url</type>
</CustomField>