force-app/main/default/objects/Kiva_Loan__c/fields/Signature_Photo__c.field-meta.xml
<CustomField>
    <fullName>Signature_Photo__c</fullName>
    <formula>IF (ISBLANK( Signature_link__c ),
&quot;No Photo&quot;,
HYPERLINK(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(Signature_link__c , &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(Signature_link__c , &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) ) ,
IMAGE(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(Signature_link__c , &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(Signature_link__c , &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) )
, &quot;Enlarge Signature Photo&quot;, 180, 320)
)
)</formula>
    <label>Signature Photo</label>
    <type>Text</type>
</CustomField>