force-app/main/default/objects/Kiva_Loan__c/fields/Specific_household_assets__c.field-meta.xml
<CustomField>
    <fullName>Specific_household_assets__c</fullName>
    <label>Specific household assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>