force-app/main/default/objects/Kiva_Loan__c/fields/Specific_lack_of_technology__c.field-meta.xml
<CustomField>
    <fullName>Specific_lack_of_technology__c</fullName>
    <label>Specific lack of technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>