force-app/main/default/objects/Kiva_Loan__c/fields/Specific_Loan_Category__c.field-meta.xml
<CustomField>
    <fullName>Specific_Loan_Category__c</fullName>
    <label>Specific Loan Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>