force-app/main/default/objects/Kiva_Loan__c/fields/Specify_organic_fertilizers__c.field-meta.xml
<CustomField>
    <fullName>Specify_organic_fertilizers__c</fullName>
    <label>Specify organic fertilizers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>