force-app/main/default/objects/Kiva_Loan__c/fields/Status_Detail_KIVA__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail_KIVA__c</fullName>
    <label>Status Detail (KIVA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>