force-app/main/default/objects/Kiva_Loan__c/fields/Success_Story_Date__c.field-meta.xml
<CustomField>
    <fullName>Success_Story_Date__c</fullName>
    <inlineHelpText>Fill in for Loans / Clients that have had success stories written about them</inlineHelpText>
    <label>Success Story Date</label>
    <type>Date</type>
</CustomField>