force-app/main/default/objects/Kiva_Loan__c/fields/Supporting_Documents_Google_Drive__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Documents_Google_Drive__c</fullName>
    <label>Supporting Documents (Google Drive)</label>
    <type>Url</type>
</CustomField>