force-app/main/default/objects/Kiva_Loan__c/fields/Theme_ID__c.field-meta.xml
<CustomField>
    <fullName>Theme_ID__c</fullName>
    <formula>RIGHT(TEXT(Category_of_Loan__c),  LEN(TEXT(Category_of_Loan__c))- FIND(&quot;,&quot;,TEXT(Category_of_Loan__c)))</formula>
    <label>Theme ID</label>
    <type>Text</type>
</CustomField>