force-app/main/default/objects/Kiva_Loan__c/fields/Top_5_uses_of_loans__c.field-meta.xml
<CustomField>
    <fullName>Top_5_uses_of_loans__c</fullName>
    <label>Top 5 uses of loans:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buy ag-inputs for own use</fullName>
            </value>
            <value>
                <fullName>Capital for ag-trading business</fullName>
            </value>
            <value>
                <fullName>Pay farm labor</fullName>
            </value>
            <value>
                <fullName>Buy food</fullName>
            </value>
            <value>
                <fullName>Pay for other expenses: education, health, others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>