force-app/main/default/objects/Kiva_Loan__c/fields/Total_Amount_Due_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due_to_Date__c</fullName>
    <label>Total Amount Due to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>