force-app/main/default/objects/Kiva_Loan__c/fields/Total_Amount_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid_to_Date__c</fullName>
    <label>Total Amount Paid to Date</label>
    <summarizedField>Kiva_Transaction__c.Payment_received__c</summarizedField>
    <summaryFilterItems>
        <field>Kiva_Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Kiva Payment In</value>
    </summaryFilterItems>
    <summaryForeignKey>Kiva_Transaction__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>