force-app/main/default/objects/Kiva_Loan__c/fields/Total_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount__c</fullName>
    <formula>Adm_Fee__c +   Kiva_Loan_Amount_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>