force-app/main/default/objects/Kiva_Loan__c/fields/Total_Loan_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Collateral__c</fullName>
    <label>Total Loan Collateral</label>
    <summarizedField>Kiva_Collateral__c.Collateral_Value__c</summarizedField>
    <summaryForeignKey>Kiva_Collateral__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>