force-app/main/default/objects/Kiva_Loan__c/fields/Total_Monthly_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Savings__c</fullName>
    <label>Total Monthly Savings</label>
    <summarizedField>Kiva_Loan_Participation__c.Monthly_Savings_Contribution__c</summarizedField>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>