force-app/main/default/objects/Kiva_Loan__c/fields/Total_Principle_Repayment_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Principle_Repayment_Due__c</fullName>
    <label>Total Principle Repayment Due</label>
    <summarizedField>Kiva_Transaction__c.Kiva_Payment_due__c</summarizedField>
    <summaryForeignKey>Kiva_Transaction__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>