force-app/main/default/objects/Kiva_Loan__c/fields/Total_Repayment_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Repayment_Due__c</fullName>
    <label>Total Repayment Due</label>
    <summarizedField>Kiva_Transaction__c.Total_Payment__c</summarizedField>
    <summaryFilterItems>
        <field>Kiva_Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Kiva Invoice</value>
    </summaryFilterItems>
    <summaryForeignKey>Kiva_Transaction__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>