force-app/main/default/objects/Kiva_Loan__c/fields/Transaction_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Invoices__c</fullName>
    <label>Transaction Invoices</label>
    <summaryFilterItems>
        <field>Kiva_Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Kiva Invoice</value>
    </summaryFilterItems>
    <summaryForeignKey>Kiva_Transaction__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>