force-app/main/default/objects/Kiva_Loan__c/fields/Utility_Bill_photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill_photo_URL__c</fullName>
    <label>Utility Bill photo URL</label>
    <type>Url</type>
</CustomField>