force-app/main/default/objects/Kiva_Loan__c/fields/UUID_Kiva__c.field-meta.xml
<CustomField>
    <fullName>UUID_Kiva__c</fullName>
    <label>UUID (Kiva)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>