force-app/main/default/objects/Kiva_Loan__c/fields/what_rate_of_interest__c.field-meta.xml
<CustomField>
    <fullName>what_rate_of_interest__c</fullName>
    <label>What rate of interest?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>