force-app/main/default/objects/Kiva_Loan__c/fields/Why_didn_t_Loan_Officer_Support__c.field-meta.xml
<CustomField>
    <fullName>Why_didn_t_Loan_Officer_Support__c</fullName>
    <label>Why didn&apos;t loan officer provide support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>