force-app/main/default/objects/Kiva_Loan__c/fields/Why_Why_not_another_Kiva_loan__c.field-meta.xml
<CustomField>
    <fullName>Why_Why_not_another_Kiva_loan__c</fullName>
    <label>Why/Why not another Kiva loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>