force-app/main/default/objects/Kiva_Loan__c/fields/Work_with_SHFs__c.field-meta.xml
<CustomField>
    <fullName>Work_with_SHFs__c</fullName>
    <label>Work with SHFs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>