force-app/main/default/objects/Kiva_Loan__c/fields/Would_take_another_Kiva_loan__c.field-meta.xml
<CustomField>
    <fullName>Would_take_another_Kiva_loan__c</fullName>
    <label>Would take another Kiva loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>