force-app/main/default/objects/Kiva_Loan__c/fields/X1st_Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>X1st_Source_of_Income__c</fullName>
    <label>1st Source of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>