force-app/main/default/objects/Kiva_Loan__c/fields/X2nd_Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Source_of_Income__c</fullName>
    <label>2nd Source of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>