force-app/main/default/objects/Kiva_Loan__c/fields/X3rd_Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Source_of_Income__c</fullName>
    <label>3rd Source of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>