force-app/main/default/objects/Kiva_Loan__c/fields/X4th_Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>X4th_Source_of_Income__c</fullName>
    <label>4th Source of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>