force-app/main/default/objects/Kiva_Loan__c/fields/Year_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Loan__c</fullName>
    <formula>YEAR(  datevalue( Date_Disbursed__c) )</formula>
    <label>Year of Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>