force-app/main/default/objects/Kiva_Loan__c/fields/Years_in_this_Busienss__c.field-meta.xml
<CustomField>
    <fullName>Years_in_this_Busienss__c</fullName>
    <label>Years in this Busienss</label>
    <summarizedField>Kiva_Loan_Participation__c.Years_in_this_business__c</summarizedField>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>