force-app/main/default/objects/Kiva_Loan__c/fields/Years_since_Group_was_formed__c.field-meta.xml
<CustomField>
    <fullName>Years_since_Group_was_formed__c</fullName>
    <label>Years since Group was formed</label>
    <summarizedField>Kiva_Loan_Participation__c.years_since_group_formed__c</summarizedField>
    <summaryForeignKey>Kiva_Loan_Participation__c.Kiva_Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>