force-app/main/default/objects/Kiva_Loan__c/fields/Years_since_the_Savings_Group_Formed__c.field-meta.xml
<CustomField>
    <fullName>Years_since_the_Savings_Group_Formed__c</fullName>
    <label>Years since the Savings Group Formed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>4 years</fullName>
            </value>
            <value>
                <fullName>More than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>