force-app/main/default/objects/Kiva_Loan__c/recordTypes/Mozambique.recordType-meta.xml
<RecordType>
    <fullName>Mozambique</fullName>
    <active>true</active>
    <description>For Kiva Loan from Mozambique only</description>
    <label>Mozambique</label>
</RecordType>