force-app/main/default/objects/Kiva_Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Main_Applicant_Name__c</columns>
    <columns>Outstanding_Principal_Balance__c</columns>
    <columns>Kiva_ID__c</columns>
    <columns>Loan_Group_Name__c</columns>
    <columns>Category_of_Loan__c</columns>
    <columns>Kiva_Status__c</columns>
    <columns>Loan_Status__c</columns>
    <columns>Loan_Application_Date__c</columns>
    <columns>Loan_Approval_Date__c</columns>
    <columns>Distrito__c</columns>
    <columns>Total_Repayment_Due__c</columns>
    <columns>Loan_Approval_Decision_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Kiva_Loan__c.Mozambique</value>
    </filters>
    <label>All</label>
</ListView>