force-app/main/default/objects/Kiva_Loan__c/listViews/Kiva_Loans_Pending_Approval_Submission.listView-meta.xml
<ListView>
    <fullName>Kiva_Loans_Pending_Approval_Submission</fullName>
    <columns>NAME</columns>
    <columns>Loan_Type__c</columns>
    <columns>Main_Applicant_Name__c</columns>
    <columns>Loan_Group_Name__c</columns>
    <columns>Category_of_Loan__c</columns>
    <columns>Adm_Fee__c</columns>
    <columns>Loan_Application_Date__c</columns>
    <columns>Loan_Approval_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Status__c</field>
        <operation>equals</operation>
        <value>New Application</value>
    </filters>
    <label>Kiva Loans Pending Approval Submission</label>
</ListView>