force-app/main/default/objects/Kiva_Loan__c/listViews/MZ_Kiva_Approvers_Kiva_Loan.listView-meta.xml
<ListView>
    <fullName>MZ_Kiva_Approvers_Kiva_Loan</fullName>
    <filterScope>Queue</filterScope>
    <label>MZ - Kiva Approvers</label>
    <queue>MZ_Kiva_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>