force-app/main/default/objects/Kiva_Loan__c/listViews/Recently_Changed.listView-meta.xml
<ListView>
    <fullName>Recently_Changed</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Recently Changed</label>
</ListView>