force-app/main/default/objects/Kiva_Loan__c/listViews/Rejected_Loan_Applications.listView-meta.xml
<ListView>
    <fullName>Rejected_Loan_Applications</fullName>
    <columns>NAME</columns>
    <columns>Main_Applicant_Name__c</columns>
    <columns>Loan_Group_Name__c</columns>
    <columns>Category_of_Loan__c</columns>
    <columns>Kiva_Status__c</columns>
    <columns>Loan_Status__c</columns>
    <columns>Adm_Fee__c</columns>
    <columns>Loan_Application_Date__c</columns>
    <columns>Loan_Approval_Date__c</columns>
    <columns>Distrito__c</columns>
    <columns>Posto_Administrativo__c</columns>
    <columns>Total_Repayment_Due__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Loan Applications</label>
</ListView>